--- a/config.toml
+++ b/config.toml
@@ -20,9 +20,9 @@ home_subtitle = "Ocean-XY is a boutique company developing iOS apps"
 # footer_copyright = ''
 
 hermit_menu = [
-    { link = "/timespeak", name = "Timespeak" },
-    { link = "/timespeak_privacy_policy", name = "Timespeak Privacy Policy" },
-    { link = "/jobs", name = "Jobs" },
+    { link = "timespeak", name = "Timespeak" },
+    { link = "timespeak-privacy-policy", name = "Timespeak Privacy Policy" },
+    { link = "jobs", name = "Jobs" },
 ]
 
 hermit_social = [
